# geocutool

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/: gs_aabb.ipynb  prim_gs_aabb.ipynb  prim_pgs_aabb.ipynb
geocutool/: __init__.py
geocutool/csrc/: base.h  pybind.cpp
geocutool/csrc/binds/primitive/: gs.cpp  pgs.cpp
geocutool/csrc/primitive/: aabb.h  gs.cu  gs.h  gs_math.cuh  pgs.cu  pgs.h
geocutool/primitive/: gs.py  pgs.py
