[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geocutool"
version = "0.0.3"
description = "Geometric Cuda Tool Box"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Do Hoang Khoi", email = "khoido8899@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["geometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Graphics :: 3D",
]
dependencies = [
    # "torch>=2.0.0", # Uncomment this if your library requires PyTorch to run!
]

[project.optional-dependencies]
cuda = [
    "cuda-toolkit==12.8.2", # Fixed package name
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/KhoiDOO/geocutool"
Repository = "https://github.com/KhoiDOO/geocutool.git"
Documentation = "https://github.com/KhoiDOO/geocutool#readme"
Issues = "https://github.com/KhoiDOO/geocutool/issues"

# ------------------------------------------------------------------------------
# SETUPTOOLS CONFIGURATION
# ------------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["geocutool*"]
exclude = ["examples*", "tests*"]

[tool.setuptools.package-data]
# Ensure the compiled C++/CUDA binaries and typing stubs are bundled into the wheel!
"geocutool" = ["py.typed", "*.so", "*.pyd", "*.pyi", "*.dll"]

# ------------------------------------------------------------------------------
# LINTER & TYPE CHECKER CONFIGURATION
# ------------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true